Fix navbar title color in high-contrast mode

--- a/assets/scss/components/_navbar.scss
+++ b/assets/scss/components/_navbar.scss
@@ -39,6 +39,10 @@
     --bs-navbar-disabled-color: white !important;
     --bs-navbar-active-color: white !important;
     --bs-navbar-toggler-color: white;
+
+    .navbar-title {
+        color: white !important;
+    }
 }
 
 .navbar-expanded {
